# LogicGate

./: Datafile  README.md  __decrypt2__.lgeso  __decrypt__.lgeso  a.lgeso  b.lgeso  key  main.lgeso  main.py  publish.sh  pyproject.toml  replit.nix
LogicGate/: LICENSE  README.rst  pyproject.toml
LogicGate/LogicGate/: LogicGate.py  lgEncrypt.py
LogicGate/tests/: test_lgEncrypt.py  test_logicgate.py
